mule-user-guide/v/3.6/mule-transformers.adoc
= 骡变形金刚
:keywords: studio, server, components, transformers, elements, format

image:transformer.png[变压器]在Mule流中，Transformer通过增强或更改消息属性，变量或有效内容的内容来准备消息以供进一步处理。数据转换是Mule最强大的功能之一：与其花费大量时间在资源或处理器之间构建定制连接，您只需使用预置变压器即可执行标准数据转换。例如，如果流中的消息源以XML格式接收数据，但下游消息处理器需要Java对象，则可以使用XML到对象转换器来转换消息负载的格式。



== 变形器库

开箱即用，Mule提供了一套标准变换器来处理最常见的数据转换场景。通常，这些元素需要最少的配置，以便于快速构建必须处理资源和处理器之间不同数据格式的应用程序。如果Mule没有你需要的特定变压器，你可以按顺序安排几个变压器来达到你需要的输出。例如，如果您需要实施A-to-C转换，但不存在此类转换器，则可以安排一个序列 -  A到B，B到C，它可以有效地模拟A到C转换器。例如，要将XML转换为JSON，请使用一个XML-to-Object转换器，后跟一个Object-to-JSON转换器。

== 骡变形金刚的例子可以分为以下几类：

[%header,cols="34,33,33"]
|===
|变形金刚分类 |描述 |示例变形金刚
| *Java Object*  |此类别包含大部分Mule变形金刚。该组中的每个转换器都将Java对象更改为另一个Java对象，将Java对象更改为非Java数据类型（例如HTTP请求），反之亦然。一个|
将*  JSON转换为对象
*  XML到对象

| *Content*  |这组变换器通过添加，删除或转换消息有效载荷来修改消息。一个|
* 附加字符串
* 表达
* 解析模板
*  XSLT

| *SAP*  |这些转换器将SAP对象（JCo函数或IDoc文档）更改为XML表示形式，反之亦然。一个|
*  SAP Object to XML
*  XML到SAP函数（BAPI）
*  XML到SAP IDoc

| *Script*  |这种类型的转换器使用自定义脚本来执行转换。如果在上面列出的类别中找不到所需的变换器，则可以使用这些变换器中的一个来实现自定义脚本来执行变换。只需将其中一个添加到您的流程中，然后使用您最喜欢的语言编写脚本以根据需要转换数据。一个|
* 的Groovy
* 的JavaScript
* 的Python
* 红宝石
* 脚本

| *Properties, Variables, and Attachments*  |这些变换器不会对消息有效负载进行操作，而是在消息上添加，删除或复制属性，变量和附件。这组消息处理器并没有像处理消息头的内容那么多。一个|
* 附件
* 属性
* 会话变量
* 变量

|===

==  DataWeave变换器

除了转换之外，Mule中还有一种类型的消息处理器，它们都将_和maps_ data：**DataWeave Transformer**转换为调色板中的**Transform Message**。除了将数据从一种格式转换为另一种格式之外，DataWeave还可以将输入字段（如last_name）映射到不同的输出字段，例如family_name（请参见下图）。更好的是，它可以将多个字段（如title，first_name和last_name）映射到复合输出字段（如full_name）。它可以检索消息中的会话状态信息以促进条件消息路由，它可以使用Mule表达式评估来促进条件值重新计算，甚至可以在表或其他流中查找信息。请在 link:/mule-user-guide/v/3.8/dataweave[DataWeave]中详细了解它。


== 另请参阅

*  *NEXT STEP*：请阅读大约 link:/mule-user-guide/v/3.6/mule-filters-scopes-and-routers[过滤器，范围和路由器]。
* 向前浏览以了解 link:/mule-user-guide/v/3.6/mule-message-structure[骡信息]的结构。
* 详细了解设置，然后使用 link:/mule-user-guide/v/3.6/mule-message-structure[属性和变量]。
